--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Animals -- Juvenile poetry'
 - !lcc 'PZ'
 - !lcc 'PR'
+- GITenberg
 title: The Quadrupeds' Pic-Nic
 url: http://www.gutenberg.org/ebooks/25681
